style(Global):fixed boders in contrast mode

--- a/src/components/apps/Contact/index.module.scss
+++ b/src/components/apps/Contact/index.module.scss
@@ -6,7 +6,6 @@
   height: 100%;
   width: 100%;
   user-select: none;
-  display: grid;
   h4:last-of-type {
     margin-top: $margin * 2;
   }
